0023098: Cppcheck warnings/errors in QA files

Fix for cppcheck warnings
Warning fixes