src/QABugs/QABugs_7.cxx
@@ -277,7 +277,7 @@ static Standard_Integer OCC862 (Draw_Interpretor& di, Standard_Integer argc, con
   for (i = 0; i < Glob_NbKnots; i++)
     aMults.SetValue(i+1,Glob_Mults[i]);
   // Create B-Spline curve
-  const Standard_Real aDegree = 14;
+  const Standard_Integer aDegree = 14;
   Handle(Geom_BSplineCurve) C1 = new Geom_BSplineCurve(aPoles,aKnots,aMults,aDegree);
 
   // Create trimmed line
